[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "jarvis"
version = "0.1.0"
[tool.poetry.dependencies]
playsound = "^1.2"
python = "^3.8"
timedelta = "^2019.4"
[tool.poetry.dev-dependencies]
